// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-form-section spec: Render logic -> should render a form section with a default button of \`Submit\` 1`] = `
<amplify-form-section>
  <mock:shadow-root>
    <form>
      <amplify-section>
        <div>
          <slot name="amplify-form-section-header">
            <div class="form-section-header">
              <h3 class="header" data-test="form-section-header-section"></h3>
              <div class="subtitle">
                <slot name="subtitle"></slot>
              </div>
            </div>
          </slot>
        </div>
        <slot></slot>
        <div>
          <slot name="amplify-form-section-footer">
            <div class="form-section-footer">
              <amplify-button data-test="form-section-form-section-button" type="submit">
                <span>
                  Submit
                </span>
              </amplify-button>
            </div>
          </slot>
        </div>
      </amplify-section>
    </form>
  </mock:shadow-root>
</amplify-form-section>
`;

exports[`amplify-form-section spec: Render logic -> should render a form section with a submit button text of \`Go\` 1`] = `
<amplify-form-section submit-button-text="Go">
  <mock:shadow-root>
    <form>
      <amplify-section>
        <div>
          <slot name="amplify-form-section-header">
            <div class="form-section-header">
              <h3 class="header" data-test="form-section-header-section"></h3>
              <div class="subtitle">
                <slot name="subtitle"></slot>
              </div>
            </div>
          </slot>
        </div>
        <slot></slot>
        <div>
          <slot name="amplify-form-section-footer">
            <div class="form-section-footer">
              <amplify-button data-test="form-section-form-section-button" type="submit">
                <span>
                  Go
                </span>
              </amplify-button>
            </div>
          </slot>
        </div>
      </amplify-section>
    </form>
  </mock:shadow-root>
</amplify-form-section>
`;

exports[`amplify-form-section spec: Render logic -> should render form section 1`] = `
<amplify-form-section>
  <mock:shadow-root>
    <form>
      <amplify-section>
        <div>
          <slot name="amplify-form-section-header">
            <div class="form-section-header">
              <h3 class="header" data-test="form-section-header-section"></h3>
              <div class="subtitle">
                <slot name="subtitle"></slot>
              </div>
            </div>
          </slot>
        </div>
        <slot></slot>
        <div>
          <slot name="amplify-form-section-footer">
            <div class="form-section-footer">
              <amplify-button data-test="form-section-form-section-button" type="submit">
                <span>
                  Submit
                </span>
              </amplify-button>
            </div>
          </slot>
        </div>
      </amplify-section>
    </form>
  </mock:shadow-root>
</amplify-form-section>
`;
